# chat-with-any-pdf

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
tools/: __init__.py  embeddings.py  llm.py  load_pdf.py  prompt.py  retriever.py  split_text.py  vectorstore.py
