[project]
name = "chat-with-any-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
]
